--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
   <div class="plugin-section">
     <div class="container">
-      <h1 class="section-header" style="color:rgb(134, 207, 255)" >UNREAL ENGINE</h1>
+      <h1 class="section-header" style="color:rgb(134, 207, 255)">UNREAL ENGINE</h1>
       <div class="row">
         <div class="col-md-4 col-12 mb-5">
           <a href="./plugins/android-native/utility-pack/overview.html" class="text-decoration-none">
@@ -70,9 +70,9 @@
                 <p class="card-text">
                   Unreal Engine Android Utility Pack containing variouse tools and functionality to aid Android Game Developers.
                 </p>
-                <!-- <a href='https://www.unrealengine.com/marketplace/en-US/product/4554c71fa94d46b19249e5b120393759' class="btn btn-custom" target="_blank">
+                <a href='https://www.unrealengine.com/marketplace/en-US/product/e3344f2c9ea941f4a5d93ebe1ee4fb21' class="btn btn-custom" target="_blank">
                   <img alt='Get it on UE Marketplace' src='images/GetItOnUEMarketplace.png' />
-                </a> -->
+                </a>
               </div>
             </div>
           </a>
