--- a/plugins/android-native/utility-pack/getting_started.html
+++ b/plugins/android-native/utility-pack/getting_started.html
@@ -130,7 +130,7 @@
                                 Download the Plugin
                             </li>
                             <p class="content" style="padding-top: 10px; padding-left: 10px">
-                                Download the plugin on the <a href="">Official Unreal Engine Marketplace</a> (Disabled until go live).
+                                Download the plugin on the <a target="_blank" href="https://www.unrealengine.com/marketplace/en-US/product/e3344f2c9ea941f4a5d93ebe1ee4fb21">Official Unreal Engine Marketplace</a>.
                             </p>
                             <li class="list-group-item">
                                 Install the Plugin
