--- a/plugins/android-native/utility-pack/overview.html
+++ b/plugins/android-native/utility-pack/overview.html
@@ -127,18 +127,21 @@
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
                     <div class="info">
                         <p class="content">
-                            <b>Android Native: Utility Pack</b> (In development)
+                            <b>Android Native: Utility Pack</b>
                         </p>
                         <p class="content">
-                            Introducing the Android Utility Pack, a comprehensive Unreal Engine plugin designed to enhance your Android mobile application's functionality and user experience.
+                            Introducing the <span style="font-weight: 500">FREE</span> Android Utility Pack, a comprehensive Unreal Engine plugin designed to enhance your Android mobile application's functionality and user experience.
                             This versatile utility pack empowers developers with a suite of essential tools.
                         </p>
                         <p class="content">
                             With this Utility Pack, you can seamlessly integrate these critical utilities into your application, ensuring smooth performance and robust functionality.
                             Effortlessly monitor and log application behaviour, managing situations that would otherwise be impossible.
                         </p>
-                        <p class="content" style="margin-bottom: 0rem;">
+                        <p class="content">
                             This plugin serves as a repository for smaller, yet crucial functionalities that might not warrant standalone plugins, ensuring your development process remains streamlined and efficient.
+                        </p>
+                        <p class="content" style="margin-bottom: 0rem;">
+                            If you have ideas that align with this plugin's capabilities, we'd love to hear from you! Join our <a href="contact.html">Discord Server</a> and share your suggestions. Your idea might just become part of the this plugin's suite of features.
                         </p>
                     </div>
                     <div class="info" style="margin-top: 20px">
