--- a/plugins/release/notes/android_notifications.html
+++ b/plugins/release/notes/android_notifications.html
@@ -39,7 +39,7 @@
         <div class="row" style="margin-left: 7px">
             <button class="mobile-button"></button>
             <!-- Side Navigation Bar -->
-            <nav id="sidebar" class="col-md-2 d-none d-md-block sidebar sidebar-custom" style="height: 640px">
+            <nav id="sidebar" class="col-md-2 d-none d-md-block sidebar sidebar-custom">
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
@@ -58,6 +58,12 @@
                             <a class="nav-link inactive" href="android_sensors.html" style="padding-bottom: 0; padding-top: 0">
                                 <img src="../../../images/AndroidSensors/Android_Sensors_Plugin_Logo.png" alt="Android Sensors" class="dropdown-item-image">
                                 Android Sensors
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="android_utility_pack.html" style="padding-bottom: 0; padding-top: 0">
+                                <img src="../../../images/AndroidUtilityPack/UtilityPack_Plugin_Logo.png" alt="Android Utility Pack" class="dropdown-item-image">
+                                Android Utility Pack
                             </a>
                         </li>
                         <li class="nav-item">
@@ -157,7 +163,7 @@
                     </div>
                 </div>
             </main>
-            <div style="margin-bottom: 700px">
+            <div style="margin-bottom: 1000px">
             </div>
         </div>
     </div>
