--- a/plugins/release/notes/porret_gaming.html
+++ b/plugins/release/notes/porret_gaming.html
@@ -39,7 +39,7 @@
         <div class="row" style="margin-left: 7px">
             <button class="mobile-button"></button>
             <!-- Side Navigation Bar -->
-            <nav id="sidebar" class="col-md-2 d-none d-md-block sidebar sidebar-custom" style="height: 640px">
+            <nav id="sidebar" class="col-md-2 d-none d-md-block sidebar sidebar-custom">
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
@@ -58,6 +58,12 @@
                             <a class="nav-link inactive" href="android_sensors.html" style="padding-bottom: 0; padding-top: 0">
                                 <img src="../../../images/AndroidSensors/Android_Sensors_Plugin_Logo.png" alt="Android Sensors" class="dropdown-item-image">
                                 Android Sensors
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link inactive" href="android_utility_pack.html" style="padding-bottom: 0; padding-top: 0">
+                                <img src="../../../images/AndroidUtilityPack/UtilityPack_Plugin_Logo.png" alt="Android Utility Pack" class="dropdown-item-image">
+                                Android Utility Pack
                             </a>
                         </li>
                         <li class="nav-item">
@@ -118,6 +124,52 @@
                     <h1 class="h2 text-white-shadow">Porret Gaming News</h1>
                 </div>
                 <div class="container" style="margin-left: 0px; padding-left: 0px;">
+                    <div class="news-card expanded">
+                        <div class="news-container">
+                            <div class="news-group-item">
+                                <div class="row">
+                                    <div class="col-auto" style="padding-right: 0">
+                                        <img class="news-badge" src="../../../images/AndroidUtilityPack/UtilityPack_Plugin_Logo.png">
+                                    </div>
+                                    <div class="col-9" style="padding-left: 10px">
+                                        <div class="news-title">New Plugin: Mobile Utility Pack</div>
+                                        <div class="news-sub-title">2024-06-06</div>
+                                    </div>
+                                </div>
+                            </div>
+                    
+                            <div class="news-info">
+                                <div class="row">
+                                    <div class="col-auto">
+                                        <img style="max-height: 156px; padding-top: 10px; padding-bottom: 10px"
+                                            src="../../../images/general/UtilityPack_Thumbnail.png">
+                                    </div>
+                                    <div class="col-auto" style="display:flex; align-items: center; margin: 0">
+                                        <div class="news-info-details" style="font-weight: 500">
+                                            <ul>
+                                                <li>Automatic Android API-33 UE Source Code Fixes</li>
+                                                <li>Automatic Android API-34 UE Source Code Fixes</li>
+                                                <li>Android ADB Logging</li>
+                                                <li>SDK Version Detection</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="col-auto" style="display:flex; align-items: center; margin: 0">
+                                        <div class="news-info-details" style="font-weight: 500">
+                                            <ul>
+                                                <li>Check Internet Connectivity</li>
+                                                <li>Detect Internet Connectivity Changes</li>
+                                                <li>Android Lifecycle Events</li>
+                                                <li>Android Battery Information</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <a class="btn-learn-more" href="../../../plugins/android-native/utility-pack/overview.html">Learn more</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="padding: 5px"></div>
                     <div class="news-card expanded">
                         <div class="news-container">
                             <div class="news-group-item">
@@ -306,7 +358,7 @@
                         </div>
                     </div>
                     <div style="padding: 5px"></div>
-                    <div class="news-card expanded">
+                    <div class="news-card">
                         <div class="news-container">
                             <div class="news-group-item">
                                 <div class="row">
