--- a/plugins/release/notes/android_notifications.html
+++ b/plugins/release/notes/android_notifications.html
@@ -132,6 +132,38 @@
                                         <img class="news-badge" src="../../../images/AndroidNotifications/AdvancedNotifications_Plugin_Logo.png">
                                     </div>
                                     <div class="col-9" style="padding-left: 10px">
+                                        <div class="news-title">Stability Release</div>
+                                        <div class="news-sub-title">2024-06-20</div>
+                                    </div>
+                                    <div class="col text-right" style="padding-left: 10px">
+                                        <div class="news-title">v1.0.1</div>
+                                    </div>
+                                </div>
+                            </div>
+                    
+                            <div class="news-info">
+                                <div class="row">
+                                    <div class="col-auto" style="display:flex; align-items: center; margin: 0">
+                                        <div class="news-info-details" style="font-weight: 500">
+                                            <ul>
+                                                <li>Downgrade Permission Library</li>
+                                                <li>Improves Comptability With Older Engine Versions</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="padding: 10px"></div>
+                    <div class="news-card expanded">
+                        <div class="news-container">
+                            <div class="news-group-item">
+                                <div class="row">
+                                    <div class="col-auto" style="padding-right: 0">
+                                        <img class="news-badge" src="../../../images/AndroidNotifications/AdvancedNotifications_Plugin_Logo.png">
+                                    </div>
+                                    <div class="col-9" style="padding-left: 10px">
                                         <div class="news-title">Initial Release</div>
                                         <div class="news-sub-title">2024-05-23</div>
                                     </div>
