small grammer isue

--- a/plugins/release/notes/android_notifications.html
+++ b/plugins/release/notes/android_notifications.html
@@ -147,7 +147,7 @@
                                         <div class="news-info-details" style="font-weight: 500">
                                             <ul>
                                                 <li>Downgrade Permission Library</li>
-                                                <li>Improves Comptability With Older Engine Versions</li>
+                                                <li>Improves Comptability with Older Engine Versions</li>
                                             </ul>
                                         </div>
                                     </div>
