optional gradle upgrade

--- a/plugins/android-native/utility-pack/sdk_fixes.html
+++ b/plugins/android-native/utility-pack/sdk_fixes.html
@@ -203,6 +203,26 @@
                         </table>
                     </div>
                 </div>
+
+                <div class="container"
+                    style="margin-left: 0px; padding-left: 0px; margin-bottom: 5px; margin-top: 40px; margin-right: 20px; border-top-left-radius: 20px;">
+                    <h1 class="list-group-item">Update Gradle</h1>
+                </div>
+                <div class="container" style="margin-left: 0px; padding-left: 0px;">
+                    <div class="info" style="border-bottom-left-radius: 20px;">
+                        <p class="content">
+                            This upgrade is only applied (automatically detected) to Unreal Engine Versions 4.27, 5.0, 5.1 and 5.2 as this has already been upgraded in later versions.
+                        </p>
+                        <p class="content">
+                            The fixes include:
+                        </p>
+                        <table class="two-column-table" style="margin-bottom: 10px">
+                            <tr>
+                                <td class="blue-diamond">Update Gradle to 7.5</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
                 
                 <div style="margin-bottom: 200px">
                 </div>
