add SEO data to index page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,185 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="google-site-verification" content="dlNBu8NsYLxnSggBKxQuIAh92PmPK5p_zQ1dF7BVWkc" />
-  <title>Porret Gaming</title>
+  <title>Porret Gaming | Unreal Engine Android Code Plugins</title>
+  <!-- SEO Configuration START-->
+  <meta name="description" content="Multiple high-quality Unreal Engine code plugins for Android. Integrate with Google Play services, native Android features and more! Full Documentation.">
+  <meta name="date" content="2024-07-02" scheme="YYYY-MM-DD">
+  <meta name="rating" content="General">
+  <!-- Structured Data for Rich Snippets START -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "Product",
+          "name": "Play Services: Billing",
+          "image": "https://porret-gaming.github.io/images/general/Billing_Thumbnail.png",
+          "description": "Update to the latest Google Play Billing Library for enhanced in-app purchases. Provide a seamless payment experience for your players in your Android Games.",
+          "url": "https://porret-gaming.github.io/plugins/google-play-services/billing/overview.html",
+          "brand": {
+            "@type": "Brand",
+            "name": "Porret Gaming"
+          },
+          "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "5",
+            "reviewCount": "12"
+          },
+          "review": [
+            {
+              "@type": "Review",
+              "reviewRating": {
+                "@type": "Rating",
+                "ratingValue": "5"
+              },
+              "author": {
+                "@type": "Person",
+                "name": "danieldeee"
+              },
+              "datePublished": "2024-06-10",
+              "name": "Working Flawlessly",
+              "reviewBody": "I bought it because Unreal Engine's main BP was not working, now it is working without any problem. Thanks to the developer. Don't even hesitate to buy for a second if this is the product that you are looking for!"
+            },
+            {
+              "@type": "Review",
+              "reviewRating": {
+                "@type": "Rating",
+                "ratingValue": "5"
+              },
+              "author": {
+                "@type": "Person",
+                "name": "danieldeee"
+              },
+              "datePublished": "2024-04-04",
+              "name": "Quick and Easy Android Billing",
+              "reviewBody": "A great plugin. Very easy to setup and great support in their discord."
+            },
+            {
+              "@type": "Review",
+              "reviewRating": {
+                "@type": "Rating",
+                "ratingValue": "5"
+              },
+              "author": {
+                "@type": "Person",
+                "name": "sanaanshamsi"
+              },
+              "datePublished": "2024-01-19",
+              "name": "A must have plugin!",
+              "reviewBody": "A must have plugin! Really good, and the support from the creators is top-notch"
+            }
+          ]
+        },
+        {
+          "@type": "Product",
+          "name": "Advanced Ads Pro",
+          "image": "https://porret-gaming.github.io/images/general/Admob_Thumbnail.png",
+          "description": "Full Blueprint Admob Integration with all types of Advertisements for your Android Mobile Application.",
+          "url": "https://porret-gaming.github.io/plugins/advertising/admob/overview.html",
+          "brand": {
+            "@type": "Brand",
+            "name": "Porret Gaming"
+          },
+          "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "5",
+            "reviewCount": "2"
+          },
+          "review": [
+            {
+              "@type": "Review",
+              "reviewRating": {
+                "@type": "Rating",
+                "ratingValue": "5"
+              },
+              "author": {
+                "@type": "Person",
+                "name": "gokhanaydal"
+              },
+              "datePublished": "2024-06-10",
+              "name": "Great Support Great Developer",
+              "reviewBody": "They are extraordinary helpful on discord and have great products. They have even solved many problems I faced outside of their products. This is a solid product that you can use inside Android. Don't even hesitate to buy!"
+            },
+            {
+              "@type": "Review",
+              "reviewRating": {
+                "@type": "Rating",
+                "ratingValue": "5"
+              },
+              "author": {
+                "@type": "Person",
+                "name": "sanaanshamsi"
+              },
+              "datePublished": "2024-05-15",
+              "name": "This plugin is excellent! I highly recommend it to everyone.",
+              "reviewBody": "This plugin is excellent! I highly recommend it to everyone. I wish there were a way to add extra stars, but 5 is the maximum allowed. Beyond the outstanding product quality, the developer's communication and support are truly remarkable."
+            }
+          ]
+        },
+        {
+          "@type": "Product",
+          "name": "Mobile Utility Pack",
+          "image": "https://porret-gaming.github.io/images/general/UtilityPack_Thumbnail.png",
+          "description": "Manage lifecycle events, handle network connectivity changes, monitor logs, check battery status and perform automatic UE source code fixes seamlessly.",
+          "url": "https://porret-gaming.github.io/plugins/android-native/utility-pack/overview.html",
+          "brand": {
+            "@type": "Brand",
+            "name": "Porret Gaming"
+          },
+          "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "5",
+            "reviewCount": "3"
+          },
+          "review": [
+            {
+              "@type": "Review",
+              "reviewRating": {
+                "@type": "Rating",
+                "ratingValue": "5"
+              },
+              "author": {
+                "@type": "Person",
+                "name": "Низами"
+              },
+              "datePublished": "2024-06-08",
+              "name": "Cool work!",
+              "reviewBody": "Cool work!"
+            },
+            {
+              "@type": "Review",
+              "reviewRating": {
+                "@type": "Rating",
+                "ratingValue": "5"
+              },
+              "author": {
+                "@type": "Person",
+                "name": "Lucas Patez"
+              },
+              "datePublished": "2024-04-07",
+              "name": "Good one",
+              "reviewBody": "Amazing! Thank you!"
+            }
+          ]
+        },
+        {
+          "@type": "Organization",
+          "name": "Porret Gaming",
+          "description": "Multiple high-quality Unreal Engine code plugins for Android. Integrate with Google Play services, native Android features and more! Full Documentation.",
+          "url": "https://porret-gaming.github.io/",
+          "logo": "https://porret-gaming.github.io/images/PorretGaming_Logo_Cut.png",
+          "sameAs": [
+            "https://x.com/PorretGaming",
+            "https://discord.gg/GgtddXNYRN",
+            "https://www.unrealengine.com/marketplace/en-US/profile/Porret+Gaming",
+            "https://www.youtube.com/@PorretGaming"
+          ]
+        }
+      ]
+    }
+  </script>
+  <!-- SEO Configuration END-->
   <link rel="icon" type="image/png" href="./images/PorretGaming_Logo_Cut.png">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="./style.css">
