--- a/plugins/release/notes/advanced_ads_pro.html
+++ b/plugins/release/notes/advanced_ads_pro.html
@@ -133,6 +133,39 @@
                                     </div>
                                     <div class="col-9" style="padding-left: 10px">
                                         <div class="news-title">Stability Release</div>
+                                        <div class="news-sub-title">2024-07-03</div>
+                                    </div>
+                                    <div class="col text-right" style="padding-left: 10px">
+                                        <div class="news-title">v1.0.7</div>
+                                    </div>
+                                </div>
+                            </div>
+                    
+                            <div class="news-info">
+                                <div class="row">
+                                    <div class="col-auto" style="display:flex; align-items: center; margin: 0">
+                                        <div class="news-info-details" style="font-weight: 500">
+                                            <ul>
+                                                <li>Minor Fix for a Packaging Issue</li>
+                                                <li>UPL Syntax Issue in Detecting Play Base Services</li>
+                                                <li>UPL Syntax Issue in Detecting UE5.4</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="padding: 10px"></div>
+                    <div class="news-card expanded">
+                        <div class="news-container">
+                            <div class="news-group-item">
+                                <div class="row">
+                                    <div class="col-auto" style="padding-right: 0">
+                                        <img class="news-badge" src="../../../images/Admob/Admob_Plugin_Logo.png">
+                                    </div>
+                                    <div class="col-9" style="padding-left: 10px">
+                                        <div class="news-title">Stability Release</div>
                                         <div class="news-sub-title">2024-06-26</div>
                                     </div>
                                     <div class="col text-right" style="padding-left: 10px">
@@ -154,7 +187,7 @@
                             </div>
                         </div>
                     </div>
-                    <div style="padding: 10px"></div> 
+                    <div style="padding: 10px"></div>
                     <div class="news-card expanded">
                         <div class="news-container">
                             <div class="news-group-item">
