android utility pack update

--- a/plugins/release/notes/android_utility_pack.html
+++ b/plugins/release/notes/android_utility_pack.html
@@ -133,6 +133,39 @@
                                     </div>
                                     <div class="col-9" style="padding-left: 10px">
                                         <div class="news-title">Feature Release</div>
+                                        <div class="news-sub-title">2024-07-16</div>
+                                    </div>
+                                    <div class="col text-right" style="padding-left: 10px">
+                                        <div class="news-title">v1.0.2</div>
+                                    </div>
+                                </div>
+                            </div>
+                    
+                            <div class="news-info">
+                                <div class="row">
+                                    <div class="col-auto" style="display:flex; align-items: center; margin: 0">
+                                        <div class="news-info-details" style="font-weight: 500">
+                                            <ul>
+                                                <li>Add an Optional androidx.fragment Update</li>
+                                                <li>Adds 'androidx.fragment:fragment:1.3.6' Constraint to Dependencies</li>
+                                                <li>Google Play Console will Prompt you to do this if it is Required</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="padding: 10px"></div>
+                    <div class="news-card expanded">
+                        <div class="news-container">
+                            <div class="news-group-item">
+                                <div class="row">
+                                    <div class="col-auto" style="padding-right: 0">
+                                        <img class="news-badge" src="../../../images/AndroidUtilityPack/UtilityPack_Plugin_Logo.png">
+                                    </div>
+                                    <div class="col-9" style="padding-left: 10px">
+                                        <div class="news-title">Feature Release</div>
                                         <div class="news-sub-title">2024-06-27</div>
                                     </div>
                                     <div class="col text-right" style="padding-left: 10px">
